# yamb2

./: Cargo.toml  Dioxus.toml  rustfmt.toml
src/: app.rs  main.rs
src/components/: mod.rs  player.rs
src/emby/: client.rs
